# multi-capture

./: .gitmodules  CMakeLists.txt  README.md  windows.json
examples/: endo_click.json  endo_click.sh  test_image.json  test_image.sh  test_rtsp.json  test_rtsp.sh  test_script.json  test_script.sh  test_video.json  test_video.sh  vnc_client.json  vnc_client.sh
src/: fly_capture.cpp  gallerywindow.cpp  gallerywindow.h  mainscreen.cpp  mainscreen.h  multi_capture.cpp  plugins.cpp  plugins.h  settings.cpp  settings.h  videowindow.cpp  videowindow.h  windows.json
src/plugins/: CMakeLists.txt
src/plugins/capture_decklink/: CMakeLists.txt  README  capture_decklink.cpp  capturedecklink.json
src/plugins/capture_ffmpeg/: CMakeLists.txt  capture_ffmpeg.cpp  capture_ffmpeg.json  capture_rtsp.json
src/plugins/capture_fireware/: CMakeLists.txt  capture_fireware.cpp  capture_fireware.json
src/plugins/capture_flycap/: CMakeLists.txt  Makefile  README  capture_flycap.cpp  capture_flycap.json
src/plugins/capture_image/: CMakeLists.txt  capture_image.cpp  capture_image.json
src/plugins/capture_script/: CMakeLists.txt  capture_script.cpp  capture_script.json
src/plugins/capture_vnc/: CMakeLists.txt  capture_vnc.cpp  capture_vnc_connector.cpp  capture_vnc_connector.h  lib
src/plugins/signal_dbus_control/: CMakeLists.txt  com.github.AndreyBarmaley.MultiCapture.service  signal_dbus_control.cpp  signal_dbus_control.json
src/plugins/signal_dbus_signal/: CMakeLists.txt  signal_dbus_signal.cpp  signal_dbus_signal.json
src/plugins/signal_gui_button/: CMakeLists.txt  signal_gui_button.cpp
src/plugins/signal_input_event/: CMakeLists.txt  signal_input_event.cpp  signal_input_event.json
src/plugins/signal_test_thread/: CMakeLists.txt  signal_test_thread.cpp  signal_test_thread.json
src/plugins/signal_test_tick/: CMakeLists.txt  signal_test_tick.cpp  signal_test_tick.json
src/plugins/storage_file/: CMakeLists.txt  storage_deinterlace.cpp  storage_file.cpp  storage_file.json
src/plugins/storage_script/: CMakeLists.txt  storage_script.cpp  storage_script.json
src/plugins/storage_video/: CMakeLists.txt  storage_format.cpp  storage_format.h  storage_video.cpp  storage_video.json
src/plugins/storage_vnc/: CMakeLists.txt  storage_vnc.cpp  storage_vnc.json  storage_vnc_connector.cpp  storage_vnc_connector.h  storage_vnc_encodings.cpp
src/plugins/storage_vnc/lib/: libvnc.cpp  libvnc.h  network_stream.cpp  network_stream.h
src/plugins/vnc/: CMakeLists.txt  capture_vnc.json  storage_vnc.json
src/plugins/vnc/capture/: capture_vnc.cpp  capture_vnc_connector.cpp  capture_vnc_connector.h
src/plugins/vnc/lib/: libvnc.cpp
src/plugins/vnc/storage/: storage_vnc.cpp  storage_vnc_connector.cpp  storage_vnc_connector.h  storage_vnc_encodings.cpp
